--- a/index.html
+++ b/index.html
@@ -166,14 +166,19 @@
 </head>
 
 <body>
-
   <div class="container">
 
     <nav>
       <ul>
-        <li><a href="#">Search</a></li>
-        <li><a href="#">Top Ratings</a></li>
-        <li><a href="#">My Account</a></li>
+        <li>
+          <a href="https://scrlettsandy.github.io/search.html/">Search</a>
+        </li>
+        <li>
+          <a href="https://scrlettsandy.github.io/ratings.html/">Top Ratings</a>
+        </li>
+        <li>
+          <a href="https://scrlettsandy.github.io/profile.html/">My Account</a>
+        </li>
       </ul>
     </nav>
 
@@ -205,20 +210,34 @@
           <div class="feature"><strong>Cinematic Perspective</strong>Films as visual language.</div>
           <div class="feature"><strong>Personal Archive</strong>A record of what moved you.</div>
         </div>
+
         <div>
           <img src="punchdrunk.jpg" alt="Punch-Drunk Love poster">
         </div>
       </div>
 
       <table>
-        <tr><th>Feature</th><th>Description</th></tr>
-        <tr><td>Lists</td><td>Organized film collections</td></tr>
-        <tr><td>Reviews</td><td>Short reflections</td></tr>
-        <tr><td>Archive</td><td>Personal cinema history</td></tr>
+        <tr>
+          <th>Feature</th>
+          <th>Description</th>
+        </tr>
+        <tr>
+          <td>Lists</td>
+          <td>Organized film collections</td>
+        </tr>
+        <tr>
+          <td>Reviews</td>
+          <td>Short reflections</td>
+        </tr>
+        <tr>
+          <td>Archive</td>
+          <td>Personal cinema history</td>
+        </tr>
       </table>
     </div>
 
   </div>
+
   <footer>
     <p>
       A CURATED FRAMES WEBSITE CREATED BY SCARLETT SANDY<br>
@@ -234,6 +253,5 @@
       UNAUTHORIZED DUPLICATION OR DISTRIBUTION IS STRICTLY PROHIBITED
     </p>
   </footer>
-
 </body>
 </html>
