--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <title>Curated Frames</title>
-
-  <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Inter&display=swap" rel="stylesheet">
@@ -75,7 +73,10 @@
     .poster-strip img:hover {
       transform: translateY(-6px);
     }
-
+/*
+GenAI Assistance Comment
+I used GenAI to help me understand and troubleshoot this specific part of my CSS involving the positioning and rotation of my floating movie poster elements.  
+The AI explained how `left:` positioning works alongside `transform: rotate()` and helped me refine the following class rules: */
     .p1 { left: 0; transform: rotate(-4deg); }
     .p2 { left: 180px; transform: rotate(2deg); }
     .p3 { left: 360px; transform: rotate(-2deg); }
